--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,8 +1,3 @@
-@import "./paysage.css";
-@import "./wave.css";
-@import "./rain.css";
-@import "./castor.css";
-
 @import url('https://fonts.googleapis.com/css2?family=BioRhyme:wght@200..800&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 @tailwind base;
@@ -14,27 +9,86 @@ body {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
-  background: linear-gradient(#f4a811, #9abef4);
-  padding: 10px;
+  background-image: url("/images/bg_riviere_2.png");
+  background-position: center top 700px;
+  background-size: 100% auto;
+  color:white;
+}
+
+.paddingLeft {
+  padding-left: 29%;
+}
+
+#titraille {
+  position: relative;
+  height: 700px;
 }
 
 h1, h2, h3 {
   font-family: "BioRhyme", serif;
 }
 
-h1 {
+.titre {
   font-size: 4rem;
+  position:absolute;
+  z-index: 2;
+  padding:20px;
+  font-weight: bold;
+}
+
+.imagetitre {
+  position:absolute;
+  z-index: 1;
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   margin-top: 3%;
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-top: 3%;
   margin-bottom: 3%;
+}
+
+.castorclic {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  position: relative;
+  padding-bottom: 83.33%;
+  padding-top: 0;
+  height: 0;
+  background-color: rgb(7 99 81 / 90%);
+}
+
+.castoriframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.game {
+  max-width: 500px;
+  margin-top: 10px;
+  margin-bottom:10px;
+  padding:10px;
+  background-color: rgb(196 166 114 / 50%);
+  border-radius: 8%;
+}
+
+.game button {
+  background-color: white;
+  color: #076351;
+  padding: 2px 15px 2px 15px;
+  border-radius: 10%;
+  margin-right: 20px;
+}
+
+.buttonLine {
+  margin-top: 10px;
 }
 
 
@@ -272,4 +326,26 @@ h3 {
 .treemap {
   margin-top: 5px;
   margin-bottom: 5px;
+}
+
+#gametext7, #gametext27 {
+  font-size: 0.8rem;
+  line-height:120%;
+}
+
+.barrages {
+  background-color: rgb(7 99 81 / 90%);
+}
+
+.footer {
+  background-color: rgb(7 99 81 / 90%);
+  margin-top: 20px;
+  text-align: center;
+}
+
+.chat {
+  background-color: rgb(7 99 81 / 90%);
+  margin-top: 190px;
+  margin-bottom: 40px;
+  padding-left: 10px;
 }
