--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -7,12 +7,9 @@
 body {
   max-width:100%;
   font-family: "IBM Plex Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   background-image: url("/images/bg_riviere_2.png");
   background-position: center top 700px;
   background-size: 100% auto;
-  color:white;
 }
 
 .paddingLeft {
@@ -20,25 +17,11 @@ body {
 }
 
 #titraille {
-  position: relative;
-  height: 700px;
+  height: 550px;
 }
 
 h1, h2, h3 {
   font-family: "BioRhyme", serif;
-}
-
-.titre {
-  font-size: 4rem;
-  position:absolute;
-  z-index: 2;
-  padding:20px;
-  font-weight: bold;
-}
-
-.imagetitre {
-  position:absolute;
-  z-index: 1;
 }
 
 h2 {
@@ -53,299 +36,21 @@ h3 {
 }
 
 .castorclic {
-  margin-top: 10px;
-  margin-bottom: 10px;
   position: relative;
-  padding-bottom: 83.33%;
-  padding-top: 0;
-  height: 0;
   background-color: rgb(7 99 81 / 90%);
 }
 
-.castoriframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 .game {
-  max-width: 500px;
-  margin-top: 10px;
-  margin-bottom:10px;
-  padding:10px;
   background-color: rgb(196 166 114 / 50%);
-  border-radius: 8%;
 }
 
 .game button {
   background-color: white;
   color: #076351;
   padding: 2px 15px 2px 15px;
-  border-radius: 10%;
   margin-right: 20px;
 }
 
-.buttonLine {
-  margin-top: 10px;
-}
-
-
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-
-
-/* Beaver */
-
-.cartoon {
-  position: absolute;
-  top: 15%;
-  left: 30%;
-  transform: translate(-50%, -50%);
-  width: 80vmin;
-  height: 80vmin;
-  margin: 50px;
-}
-
-.cartoon div {
-  position: absolute;
-  box-sizing: border-box;
-}
-
-.b {
-  border: 0.5vmin solid;
-}
-
-.r {
-  border-radius: 100%;
-}
-
-.hb::before,
-.ha::after {
-  content: "";
-  display: block;
-  position: absolute;
-  box-sizing: border-box;
-}
-
-/****/
-.cartoon {
-  --skin: #963;
-  --dark: #630;
-  --line: #222;
-}
-
-.corps {
-  width: 70%;
-  height: 80%;
-  background: var(--skin);
-  border-radius: 100% / 115% 115% 55% 55%;
-  top: 10%;
-  left: 60%;
-  transform: translate(-50%, 0);
-}
-
-.mouth {
-  width: 30%;
-  height: 20%;
-  background: var(--skin);
-  border: 1vmin solid transparent;
-  border-bottom: 1vmin solid var(--line);
-  left: 50%;
-  transform: translate(-50%, 0);
-  top: 15%;
-}
-
-.mouth::before,
-.mouth::after {
-  width: 50%;
-  height: 50%;
-  border: 1vmin solid transparent;
-  border-radius: 50%;
-  border-right: 1vmin solid var(--line);
-  transform: rotate(45deg);
-  top: 42%;
-  left: -30%;
-}
-
-.mouth::after {
-  transform: scaleX(-1) rotate(45deg);
-  left: auto;
-  right: -30%;
-}
-
-.eye {
-  width: 6vmin;
-  height: 6vmin;
-  background: white;
-  top: 22%;
-  left: 27.75%;
-  box-shadow: 
-    17.5vmin -1.5vmin 0 -2.5vmin white,
-    19vmin 0 var(--line),
-    inset -1.5vmin -1.5vmin 0 2.5vmin var(--line)
-}
-
-.teeth {
-  width: 10%;
-  height: 8.5%;
-  background: white;
-  background-image: linear-gradient(to right, transparent 45%, rgba(0,0,0,0.1) 50%, transparent 55%);
-  border-radius: 0 0 100% 100% ;
-  top: 32%;
-  left: 50%;
-  transform: translate(-50%, 0);
-}
-
-.nose {
-  width: 10%;
-  height: 5%;
-  background: var(--dark);
-  border-radius: 2.5vmin 2.5vmin 10vmin 10vmin;
-  top: 27%;
-  left: 50%;
-  transform: translate(-50%, 0);
-  box-shadow: inset 0 0 0 4vmin rgba(0,0,0,0.2)
-}
-
-.ear, .foot {
-  width: 12%;
-  height: 18%;
-  background: var(--dark);
-  border-radius: 100% / 80% 80% 100% 100%;
-  transform: rotate(-33deg);
-  top: 10%;
-  left: 35%;
-}
-
-.ear + .ear {
-  transform: rotate(38deg);
-  left: 72%;
-}
-
-.foot {
-  transform: scale(1.5) rotate(-140deg);
-  top: 75%;
-}
-
-.foot + .foot {
-  transform: scale(1.5) rotate(140deg);
-  left: 74%;
-}
-
-.tail {
-  width: 45%;
-  height: 30%;
-  background: var(--dark);
-  background-image:
-    repeating-linear-gradient(45deg, transparent 0 10%, rgba(0,0,0,0.3) 0 12%),
-    repeating-linear-gradient(-45deg, transparent 0 10%, rgba(0,0,0,0.3) 0 12%);
-  top: 45%;
-  transform: rotate(20deg);
-  box-shadow: inset 0 0 0 20vmin rgba(0,0,0,0.2)
-}
-
-.arm {
-  width: 20%;
-  height: 28%;
-  border: 1vmin solid var(--dark);
-  border-top: 0;
-  border-radius: 0 0 10vmin 10vmin;
-  top: 45%;
-  left: 5%;
-}
-
-.arm::after {
-  height: 50%;
-  width: 100%;
-  background: var(--skin);
-  left: -2vmin;
-}
-
-.arm + .arm {
-  left: 75%;
-}
-
-.arm + .arm::after {
-  left: 2vmin;
-}
-
-.hair {
-  width: 10%;
-  height: 15%;
-  background: var(--skin);
-  transform: skewY(40deg) rotate(5deg);
-  left: 40%;
-  top: -2%;
-}
-
-.hair::after {
-  width: 100%;
-  height: 100%;
-  background: var(--skin);
-  left: 30%;
-  top: -30%;
-  transform: rotate(30deg) skewY(40deg)
-}
-
-
-/* Intersection */
-
-.rect {
-  width: 10px;
-  height: 10px;
-  display: inline-block;
-}
-
-.label {
-  margin-left: 10px;
-}
-
-#divLegend {
-  width: 150px;
-  border: 1px solid black;
-  padding: 5px;
-}
-
-#castor-infos {
-  list-style-type: decimal;
-}
-
-.charty {
-  position: relative;
-  margin: auto;
-  height: 50vh;
-  width: 50vw;
-}
-
-.treemap {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-#gametext7, #gametext27 {
-  font-size: 0.8rem;
-  line-height:120%;
-}
-
-.barrages {
+.footer, .chat, .barrages {
   background-color: rgb(7 99 81 / 90%);
-}
-
-.footer {
-  background-color: rgb(7 99 81 / 90%);
-  margin-top: 20px;
-  text-align: center;
-}
-
-.chat {
-  background-color: rgb(7 99 81 / 90%);
-  margin-top: 190px;
-  margin-bottom: 40px;
-  padding-left: 10px;
 }
