--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,22 +5,16 @@
 @tailwind utilities;
 
 body {
-  max-width:100%;
   font-family: "IBM Plex Sans", sans-serif;
   background-image: url("/images/bg_riviere_2.png");
-  background-position: center top 700px;
-  background-size: 100% auto;
-}
-
-.paddingLeft {
-  padding-left: 29%;
+  background-size: contain;
 }
 
 #titraille {
   height: 550px;
 }
 
-h1, h2, h3 {
+h1, h2 {
   font-family: "BioRhyme", serif;
 }
 
@@ -29,14 +23,7 @@ h2 {
   margin-top: 3%;
 }
 
-h3 {
-  font-size: 1.5rem;
-  margin-top: 3%;
-  margin-bottom: 3%;
-}
-
 .castorclic {
-  position: relative;
   background-color: rgb(7 99 81 / 90%);
 }
 
@@ -55,7 +42,7 @@ h3 {
   background-color: rgb(7 99 81 / 90%);
 }
 
-.treemap {
-  margin-top: '5px';
-  margin-bottom: '5px';
+.resp-img {
+  position: relative!important;
+  max-width:800px;
 }
